[package]
name = "piapprec"
version = "0.1.0"
edition = "2021"
description = "Piapprec is a partial pre-reveal entropy chain."
repository = "https://github.com/gdoteof/piapprec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"
arrayref = "0.3.6"
